// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correclty display for multiple-selected expenses 1`] = `
<div>
  <h1>
    Viewing 
     expenses totalling 
    $10,951.00
  </h1>
</div>
`;

exports[`should correclty display for one selected expense 1`] = `
<div>
  <h1>
    Viewing 
     expenses totalling 
    $1.22
  </h1>
</div>
`;
